--- a/WinFileSearch/MainWindow.xaml
+++ b/WinFileSearch/MainWindow.xaml
@@ -45,7 +45,7 @@
                     <ColumnDefinition Width="75"/>
                 </Grid.ColumnDefinitions>
                 <Label Grid.Column="0">File Name:</Label>
-                <ComboBox Grid.Column="1" Margin="3,3,3,3" IsEditable="True" >
+                <ComboBox Grid.Column="1" x:Name="ComboBoxFileName" ItemsSource="{Binding Source={x:Static props:Settings.Default}, Path=ComboBoxFileNames, Mode=TwoWay}" Margin="3,3,3,3" IsEditable="True" >
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding}" TextWrapping="Wrap"/>
@@ -65,7 +65,7 @@
                     </ComboBox.ItemContainerStyle>
                 </ComboBox>
                 <CheckBox Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center">Reg Ex</CheckBox>
-                <Button Grid.Column="3" Margin="3,3,3,3">Start</Button>
+                <Button Grid.Column="3" Margin="3,3,3,3" Click="ButtonStart_Click">Start</Button>
             </Grid>
 
             <Grid Grid.Row="1" >
@@ -75,7 +75,7 @@
                     <ColumnDefinition Width="75"/>
                 </Grid.ColumnDefinitions>
                 <Label Grid.Column="0">Search Text:</Label>
-                <ComboBox Grid.Column="1" Margin="3,3,3,3" IsEditable="True" ></ComboBox>
+                <ComboBox Grid.Column="1" Name="ComboBoxSearchText" ItemsSource="{Binding Source={x:Static props:Settings.Default}, Path=ComboBoxSearchText, Mode=TwoWay}" Margin="3,3,3,3" IsEditable="True" ></ComboBox>
                 <Button Grid.Column="2" Margin="3,3,3,3">Start</Button>
             </Grid>
 
@@ -86,8 +86,8 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <Label Grid.Column="0">Path:</Label>
-                <ComboBox Grid.Column="1" Margin="3,3,3,3" IsEditable="True" ></ComboBox>
-                <CheckBox Grid.Column="2" Margin="3,3,3,3" VerticalAlignment="Center">Include Subdirs</CheckBox>
+                <ComboBox Grid.Column="1" x:Name="ComboSearchDirectory" ItemsSource="{Binding MainData.ComboDirectoryItems}" Margin="3,3,3,3" IsEditable="True" TextBoxBase.TextChanged="ComboSearchDirectory_TextChanged"  ></ComboBox>
+                <CheckBox Grid.Column="2" Margin="3,3,3,3" VerticalAlignment="Center">Search Subdirs</CheckBox>
             </Grid>
         </Grid>
         <Expander Grid.Row="2"  Name="AdvancedExpander" HorizontalAlignment="Left" Header="Advanced" ExpandDirection="Down" IsExpanded="False" >
@@ -120,13 +120,16 @@
                         <DataTrigger Binding="{Binding TraceEventType}" Value="Verbose">
                             <Setter Property="Foreground" Value="DarkGray" />
                         </DataTrigger>
+                        <DataTrigger Binding="{Binding TraceEventType}" Value="{x:Null}">
+                            <Setter Property="Background" Value="LightGray" />
+                        </DataTrigger>
                     </Style.Triggers>
                 </Style>
             </ListView.Resources>
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Time"  DisplayMemberBinding="{Binding TimeStamp}"/>
-                    <GridViewColumn Header="Message" DisplayMemberBinding="{Binding Message}" Width="300"/>
+                    <GridViewColumn Header="Time"  DisplayMemberBinding="{Binding TimeStamp}" Width="{Binding Source={x:Static props:Settings.Default}, Path=TraceInfoTimeColumnWidth, Mode=TwoWay}"/>
+                    <GridViewColumn Header="Message" DisplayMemberBinding="{Binding Message}" Width="{Binding Source={x:Static props:Settings.Default}, Path=TraceInfoMessageColumnWidth, Mode=TwoWay}"/>
                 </GridView>
             </ListView.View>
         </ListView>
